@@ -1,3 +1,9 @@
+2008-12-29  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_draw_toolbar):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_toolbar):
+	Added a small highlight on toolbarstyle = 2.
+
 2008-12-28  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/cairo-support.c (murrine_draw_glaze):
